ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: <Host>
      http:
        paths:
          - pathType: Exact
            path: "/nginx"
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
